# zen

./: .dockerignore  .env.example  .gitignore  .npmrc  .prettierignore  .prettierrc.json  .release-it.json  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  biome.json  compose.yaml  docker-compose.yml  drizzle.config.ts  esbuild.config.mjs  eslint.config.mjs  lint-staged.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json
.github/workflows/: ci.yml
.husky/: pre-commit
apps/bot/: .env.example  README.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
apps/web/: .env.example  components.json  package.json
drizzle/: 0000_cynical_kate_bishop.sql  0000_nervous_tyger_tiger.sql  0001_free_queen_noir.sql  0001_goofy_shiver_man.sql  0002_lively_zombie.sql  0002_windy_menace.sql  0003_parallel_siren.sql  0003_petite_onslaught.sql  0004_small_proteus.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  _journal.json
scripts/: clear-commands.ts  deploy-commands.ts
src/: bot.ts  config.rs  data.rs  handler.rs  index.ts  locales.rs  main.rs  main.ts
src/commands/: deployment.ts  index.ts  mod.rs  ping.rs  ping.ts  registry.ts  types.ts
src/config/: env.ts
src/db/: devGuildSeed.ts  index.ts  schema.ts
src/events/: client-error.ts  client-warn.ts  index.ts  ready.ts  registry.ts  shard-disconnect.ts  shard-error.ts  shard-ready.ts  shard-reconnecting.ts  shard-resume.ts  types.ts
(+182 files in other folders)
