[package]
name = "zen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
